fixed gap

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ h2{
 h3 {
     text-align: center;
     color:white;
-    font-size: 1vw; /* Set the desired font size */
+    font-size: 2vw; /* Set the desired font size */
     padding-top: 2vw;
     padding-bottom: 2vw;
 }
